--- a/src/settings.properties
+++ b/src/settings.properties
@@ -1,3 +1,3 @@
-name=EmelieWahlestedt
+name=Emelie
 password=password1234
 connectionString=jdbc:mysql://localhost:3306/Webshop?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
